--- a/thesis/5t-method-fused-lasso.Rmd
+++ b/thesis/5t-method-fused-lasso.Rmd
@@ -1,5 +1,5 @@
 # The fused lasso
-## General
+## Introduction
 ```{r}
 # TODO
 # Intro name and motivation fused lasso
@@ -54,15 +54,16 @@
 
 As expected and seen in the results, the different LASSO models choose single
 SST regions as predictors as opposed to whole regions.
-Since the LASSO only regularizes the magnitude of coefficients
+When predictors are highly correlated the lasso tends to
+choose only one of the variables and discard the others.
+Also the LASSO only regularizes the magnitude of coefficients
 but ignores their ordering.  
 We therefore use the so-called *fused lasso* as implemented in the *genlasso* package and the respective *fusedlasso* function. (@tibshirani2005sparsity, @genlassopackage)
 The fused lasso is a generalization of the lasso for problems with features
 that can be ordered in a meaningful way. It penalizes not only the coefficients'
 $L_1$-norm but also their differences given their ordering, introducing sparsity
-in both of them @tibshirani2005sparsity.
-In our case the fused lasso thus penalizes the differences of SST coefficients
-that are close to each other.
+in both of them.
+In our case the fused lasso thus penalizes the differences of SST coefficients that are close to each other.
 
 The fused LASSO as implemented in *genlasso* package solves the problem:
 
@@ -84,7 +85,7 @@ controls the sparsity of the coefficients. $\gamma=0$ leads to complete fusion o
 $\hat{\beta}$ is computed as a function of $\lambda$, with fixed $\gamma$.
 
 
-### Implementation
+## Implementation
 The summary of the algorithm is taken from the paper proposing
 the implementation, @arnold2016efficient and the original paper introducing 
 the algorithm @tibshirani2011solution.
@@ -120,8 +121,7 @@ denotes a penalty matrix, and $\lambda \geq 0$ is a regularization parameter.
 The dual path algorithm solves not the primal but the dual solution of the problem
 and computes the solution for a whole path instead of single values of $\lambda$.
 Hence the "dual" and "path" that make up the name.
-@arnold2016efficient argue that the strength of the original algorithm 
-@tibshirani2011solution lays in the fact that it applies to a unified framework
+@arnold2016efficient argue that the strength of the original algorithm lays in the fact that it applies to a unified framework
 in which $D$ can be a general penalty matrix.
 Let's consider the case when $X=I$ and $rank(X)=p$ (this is called the "signal approximator" case),
 the dual problem of \@ref(eq:gen-lasso) is then:
@@ -139,7 +139,7 @@ The primal and dual solutions, $\hat{\beta}$ and $\hat{u}$ are related by:
 \end{equation}
 
 While the primal solution is unique, this does not need to be the case 
-for dual solution (note the element notation in \@ref(eq:dual).
+for the dual solution (note the element notation in \@ref(eq:dual).
 The dual path algorithm starts at $\lambda = \infty$ and computes the
 path until $\lambda = 0$.
 Conceptually the algorithm keeps track of the coordinates of the dual
@@ -156,12 +156,12 @@ Algorithm 1 handles the $X=I$ case and Algorithm 2 the general $X$ case.
 As we introduced the dual in \@ref(eq:dual), it assumed $X=I$, which is not satisfied 
 in our case.
 For the general $X$ case the problem formulation can be rewritten so that the
-formula only changes $D$ and $y$ to $\tilde{D}$ and $\tilde{y}$ and then the same Algorithm can be applied. $\tilde{D}=DX^+$ and $\tilde{y}=XX^+y$, where $X^x$ is the 
+formula only changes $D$ and $y$ to $\tilde{D}$ and $\tilde{y}$ and then the same algorithm can be applied. $\tilde{D}=DX^+$ and $\tilde{y}=XX^+y$, where $X^x$ is the 
 Moore-Penrose pseudoinverse of $X \in \mathbb{R}^{n \times p}$.
 Algorithm 2 therefore transforms $X$ and $y$ in a certain way and then applies Algorithm 1
 to the transformed problem.
-Its also easy to see that in our case $p > n$ and $X$ is column rank deficient.
-They solve this by adding a small fixed $l_2 $penalty to the original problem,which 
+It's also easy to see that in our case $p > n$ and $X$ is column rank deficient.
+They solve this by adding a small fixed $l_2$ penalty to the original problem,which 
 leads to:
 
 
@@ -186,7 +186,7 @@ Special care has to be taken though for general X and certain $D$.
 "Blindly" applying the algorithms then would lead to a large drop in relative
 efficiency.
 Since $\tilde{D}= DX^+$ destroys the special structures that are present 
-in the penalty matrix special implementations are constructed as well for our case
+in the penalty matrix,  special implementations are constructed including our case
 with general $X$ and $D$ coming from the sparse fused lasso.
 
 It can be shown that the computational costly steps in the algorithm reduce
@@ -194,16 +194,16 @@ to solving linear systems of the form $DD^T = Dc$.
 When $D$ is the oriented incidence matrix of a graph, $D$ will be sparse
 but can also be rank deficient when the graph has more edges than nodes, 
 hence $m > p$. 
-It can be shown that for sparse undetermined systems it is possible
+For sparse undetermined systems it is possible
 to find an arbitrary solution (here called the *basic* solution), but computing the solution with minimum $l_2$
-norm is a lot more difficult in general.
+norm is a lot more difficult in general @van1996matrix.
 It is possible though to derive the minimum $l_2$ norm solution from
 the basic solution.
 In the case of penalty matrices that come from a graph the structure of $D$
 can be used to improve efficiency when 
 When $D$ is the incidence matrix of a graph, then $D^TD$ is the Laplacian matrix of G.
 The Laplacian linear systems are then solved using a sparse Cholesky decomposition.
-For further details of the steps used in our case refer to Section 4 and in @arnold2016efficient.
+For further details of the steps used in our case refer to Section 4 and 5 in @arnold2016efficient.
 
 
 
