--- a/thesis/z-test-lasso-diff1.Rmd
+++ b/thesis/z-test-lasso-diff1.Rmd
@@ -299,6 +299,13 @@ full_preds
 mse_full <- get_mse_from_pred_plot(full_preds)
 mse_full
 ```
+```{r}
+coef_full <- readRDS(paste0(path_to_model_folder,
+                     "coef-plots/coef-plot-full.rds"))
+coef_full
+```
+
+
 
 ```{r}
 full_best <- readRDS(paste0(path_to_model_folder,
