--- a/thesis/5s-method-lasso-regression.Rmd
+++ b/thesis/5s-method-lasso-regression.Rmd
@@ -5,7 +5,7 @@ output:
 ---
 # LASSO Regression
 
-## The LASSO
+## Introduction
 We want to create a model that has predictive and
 explanatory power. Predictive power meaning it can
 predict the precipitation in the Central Amazon Basin, "reasonably well". Explanatory power in the sense of being interpretable, so that we can identify those regions in sea
@@ -42,7 +42,7 @@ How many predictors are included depends on the strength of regularization given
 Elastic net with $\alpha=0.5$ tends to either include or drop the entire group together.
 To specifically choose a group of predictors, variations of the lasso or other models have to be considered.
 
-## Optimization
+## Implementation
 The glmnet function finds a solution path for the lasso problem
 via coordinate descent.
 The implemented algorithm was suggested by @van2007prediction.
