--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -174,3 +174,21 @@ urldate = {20-04-21}
   publisher={Institute of Mathematical Statistics}
 }
 
+@article{van1996matrix,
+  title={Matrix computations (Johns Hopkins studies in mathematical sciences)},
+  author={Van Loan, Charles F and Golub, G},
+  journal={Matrix Computations},
+  year={1996}
+}
+
+
+@article{tibshirani1996regression,
+  title={Regression shrinkage and selection via the lasso},
+  author={Tibshirani, Robert},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={58},
+  number={1},
+  pages={267--288},
+  year={1996},
+  publisher={Wiley Online Library}
+}
