--- a/thesis/ref-lib.bib
+++ b/thesis/ref-lib.bib
@@ -51,9 +51,9 @@
 @online{PIC,
 author = {Potsdam Institute for Climate Impact Research (PIK) e. V.},
 title = {Potsdam Insitute for Climate Impact Research},
-year = 2021,
+year = 2022,
 url = {https://www.pik-potsdam.de/en},
-urldate = {20-04-21}
+urldate = {05-08-22}
 }
 
 @book{fahrmeir1996multivariate,
@@ -175,12 +175,11 @@ urldate = {20-04-21}
 }
 
 @article{van1996matrix,
-  title={Matrix computations (Johns Hopkins studies in mathematical sciences)},
+  title={Matrix computations},
   author={Van Loan, Charles F and Golub, G},
-  journal={Matrix Computations},
-  year={1996}
+  year={1996},
+  publisher={The Johns Hopkins University Press, Baltimore}
 }
-
 
 @article{tibshirani1996regression,
   title={Regression shrinkage and selection via the lasso},
