--- a/thesis/1d-corr-summary.Rmd
+++ b/thesis/1d-corr-summary.Rmd
@@ -1,4 +1,4 @@
-# Correlation analysis
+# Correlation analysis {#correlation-chapter}
 ## Short Recap 
 
 We give a short overview over the correlation between monthly sea surface temperature and monthly mean precipitation in the Central Amazonas Basin (CAB).
@@ -45,8 +45,8 @@ knitr::include_graphics("../code/Rmarkdown/plots-markdown/og-data/corr-0.jpg")
 ```{r, echo = FALSE, out.width="65%", out.height="65%",fig.show='hold',fig.align='center'}
 knitr::include_graphics("../code/Rmarkdown/plots-markdown/og-data/q-corr-0.jpg")
 ```
-Inspecting the density plot for timelag 0, we see two modi for correlations,
-one for negative correlations around -0.8 and one for possitive correlations around 0.8. Also a small spike can be seen for low negative correlations.
+Inspecting the density plot for time lag 0, we see two modi for correlations,
+one for negative correlations around -0.8 and one for positive correlations around 0.8. Also a small spike can be seen for low negative correlations.
 If we plot these correlations on the respective grid points we see a clear north-south negative-positive correlation distinction. The "boarder" is organised around the equator.
 The plot for the strongest 5% of correlations reveals areas with strong positive and negative correlations in the north and south respectively.
 
